src/snapshots/vm__parser__test__parse_while-6.snap
---
source: src/parser.rs
expression: "while_statement(\"outer: while (true) { break :outer; }\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 37,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: While {
                label: Some(
                    u!("outer"),
                ),
                predicate: Ast {
                    node: Literal(
                        Boolean(
                            true,
                        ),
                    ),
                    span: LocatedSpan {
                        offset: 14,
                        line: 1,
                        fragment: "true",
                        extra: (),
                    },
                },
                body: [
                    Ast {
                        node: Break {
                            label: Some(
                                u!("outer"),
                            ),
                        },
                        span: LocatedSpan {
                            offset: 22,
                            line: 1,
                            fragment: "break :outer",
                            extra: (),
                        },
                    },
                ],
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "outer: while (true) { break :outer; }",
                extra: (),
            },
        },
    ),
)
