src/snapshots/vm__parser__test__parse_while-7.snap
---
source: src/parser.rs
expression: "while_statement(\"outer: while (true) { continue :outer; }\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 40,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: While {
                label: Some(
                    u!("outer"),
                ),
                predicate: Ast {
                    node: Literal(
                        Boolean(
                            true,
                        ),
                    ),
                    span: LocatedSpan {
                        offset: 14,
                        line: 1,
                        fragment: "true",
                        extra: (),
                    },
                },
                body: [
                    Ast {
                        node: Continue {
                            label: Some(
                                u!("outer"),
                            ),
                        },
                        span: LocatedSpan {
                            offset: 22,
                            line: 1,
                            fragment: "continue :outer",
                            extra: (),
                        },
                    },
                ],
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "outer: while (true) { continue :outer; }",
                extra: (),
            },
        },
    ),
)
