src/snapshots/vm__parser__test__parse_while.snap
---
source: src/parser.rs
expression: "while_statement(\"while (a < 10) { a += 1; }\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 26,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: While {
                label: None,
                predicate: Ast {
                    node: BinaryOp(
                        Lt,
                        Ast {
                            node: Ident(
                                u!("a"),
                            ),
                            span: LocatedSpan {
                                offset: 7,
                                line: 1,
                                fragment: "a",
                                extra: (),
                            },
                        },
                        Ast {
                            node: Literal(
                                Int(
                                    10,
                                ),
                            ),
                            span: LocatedSpan {
                                offset: 11,
                                line: 1,
                                fragment: "10",
                                extra: (),
                            },
                        },
                    ),
                    span: LocatedSpan {
                        offset: 7,
                        line: 1,
                        fragment: "a < 10",
                        extra: (),
                    },
                },
                body: [
                    Ast {
                        node: Assignment {
                            ident: u!("a"),
                            value: Ast {
                                node: BinaryOp(
                                    Add,
                                    Ast {
                                        node: Ident(
                                            u!("a"),
                                        ),
                                        span: LocatedSpan {
                                            offset: 17,
                                            line: 1,
                                            fragment: "a",
                                            extra: (),
                                        },
                                    },
                                    Ast {
                                        node: Literal(
                                            Int(
                                                1,
                                            ),
                                        ),
                                        span: LocatedSpan {
                                            offset: 22,
                                            line: 1,
                                            fragment: "1",
                                            extra: (),
                                        },
                                    },
                                ),
                                span: LocatedSpan {
                                    offset: 17,
                                    line: 1,
                                    fragment: "a += 1",
                                    extra: (),
                                },
                            },
                        },
                        span: LocatedSpan {
                            offset: 17,
                            line: 1,
                            fragment: "a += 1",
                            extra: (),
                        },
                    },
                ],
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "while (a < 10) { a += 1; }",
                extra: (),
            },
        },
    ),
)
